fixed extra space on right

--- a/site/src/scss/me.scss
+++ b/site/src/scss/me.scss
@@ -147,9 +147,9 @@
 }
 .about-me {
   top: 100px;
-  left: 10px;
+  left: 30px;
   width: 300px;
-  padding: 50px;
+  padding: 20px;
   margin: 10px;
   position: absolute;
   hr {
